Fix Ollama proxy POST/OPTIONS and use /ollama base URL

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ android/local.properties
 
 # Node (optional)
 node_modules/
+
+# Android build junk
+android/.gradle/
+android/app/build/
+android/app/debug/
+android/local.properties
+
+# Node junk
+web/node_modules/
+web/.next/
+web/.vercel/
+
